Adding cover photo, CV, and other changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--Header-->
   <div class="header">
     <img class="banner"
-         src="https://media.istockphoto.com/photos/top-view-image-of-working-table-with-accessories-putting-on-it-cup-picture-id1213244326"/>
+         src="img/CoverPhoto_COPY.jpg"/>
     <div class="a">
       <div class="avatar">
         <img src="/img/photo.jpg" alt="Dr. Sara Mitchell"/>
@@ -66,10 +66,10 @@
         <i class="fa fa-caret-down"></i>
       </a>
       <div class="dropdown-container">
-        <a href="#Teaching Philosophy">Teaching Philosophy</a>
-        <a href="#Teaching Interests">Teaching Interests</a>
+        <a href="#Teaching Overview">Teaching Overview</a>
         <a href="#Courses">List of Courses Taught</a>
         <a href="#Course Descriptions">Course Descriptions</a>
+        <a href="#Potential Courses">Potential Courses</a>
       </div>
     </div>
   </div>
@@ -104,7 +104,9 @@
     Ireland, where I contributed to a number of economic impact assessments, policy
     reviews, and other assignments for various government departments and agencies.</p>
 
-  <p>Add a link to CV</p>
+  <a href="img/SaraMitchellCV_May2020.pdf" download="SaraMitchellCV_May2020.pdf">
+    <p>Download my CV here</p>
+  </a>
 
   <hr>
 
@@ -424,168 +426,11 @@
 
     <h1>Teaching</h1>
 
-    <a class="anchor" name="Teaching Philosophy"><h2>Teaching Philosophy</h2></a>
+    <a class="anchor" name="Teaching Overview"><h2>Teaching Overview</h2></a>
 
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-      tortor
-      quam,
-      feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-      Aenean
-      ultricies
-      mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-      tortor
-      quam,
-      feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-      Aenean
-      ultricies
-      mi vitae est. Mauris placerat eleifend leo.ultricies eget, tempor sit amet, ante. Donec eu libero sit
-      amet
-      quam
-      egestas semper. Aenean ultricies
-      mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-      tortor
-      quam,
-      feugiat vitae, ultricies eget, tempor sit ultricies eget, tempor sit amet, ante. Donec eu libero sit
-      amet
-      quam
-      egestas semper. Aenean ultricies
-      mi vitae est. Mauris placerat eleifend leo..</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-      tortor
-      quam,
-      feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-      Aenean
-      ultricies
-      mi vitae est. Mauris placerat eleifend leo ultricies eget, tempor sit amet, ante. Donec eu libero sit
-      amet
-      quam
-      egestas semper. Aenean ultricies
-      mi vitae est. Mauris placerat eleifend leo itant morbi tristique senectus et netus et malesuada fames ac
-      turpis
-      egestas. Vestibulum tortor quam,
-      feugiat vitae, ultricies eget, tempor.</p>
-    <p>ADD COPY OF NOMINATION FOR TEACHING AWARD</p>
-
-    <h3>Thesis Supervision</h3></a>
-  <p><b>Bachelor students:</b> Economics (4)</p>
-  <p><b>Masters students:</b> Economics (4); Business Mathematics (1)</p>
-
-  <hr>
-
-  <a class="anchor" name="Teaching Interests"><h2>Teaching Interests</h2></a>
-
-  <h3>Urban Economics</h3>
-  <p>Course level: Bachelor or masters</p>
-  <p>Course description: In this course, we will pose and answer urban economics questions, such as why do cities
-    exist? Why firms cluster? What determines city size and urban growth? We will then use economic theory to
-    analyse the location choice of individuals and firms and to analyse the geography of education, employment,
-    housing, transportation, poverty, and crime.</p>
-  <p>Core teaching elements: Lectures and exam (bachelor-level) or research papers with presentations
-    (master-level)</p>
-  <p>Recommended reading:</p>
-  <ul>
-    <li>
-      <em>Urban Economics</em> by Arthur O'Sullivan
-    </li>
-    <li>
-      <em>Lectures on Urban Economics</em> by Jan K. Brueckner
-    </li>
-    <li>
-      <em>The Triumph of the City</em> by Edward Glaeser
-    </li>
-    <li>
-      <em>Handbook of Urban and Regional Economics</em> edited by Gilles Duranton, Vernon Henderson, and
-      William Strange and other academic journal articles
-    </li>
-    <li>
-      Relevant news articles, podcasts and other sources
-    </li>
-  </ul>
-
-
-  <h3>Economics of European Integration</h3>
-  <p>Course level: Bachelor or masters</p>
-  <p>Course description: This course covers the microeconomics and macroeconomics the EU integration process from
-    the post-war period to present day. We will discuss the phases of trade integration leading to the
-    establishment of a single market, the geography of inequality and regional disparities and patterns of
-    migration, the evolution of CAP and EU Regional Policy, theory of optimal currency areas, evolution of
-    monetary policy and the euro, and the impact of the financial crisis, Brexit, and COVID-19.</p>
-  <p>Core teaching elements: Lectures, research paper with presentation</p>
-  <p>Recommended reading:</p>
-  <ul>
-    <li>
-      <em>The Economics of European Integration</em> by Charles Wyplosz and Richard E. Baldwin
-    </li>
-  </ul>
-
-  <h3>Economics of Art and Culture</h3>
-  <p>Course level: Masters</p>
-  <p>Course description: In this course, students will learn how to use tools of economics to interpret and
-    understand cultural phenomena, identify cultural agents and their activities, and the understand
-    relationship between culture and economics particularly in the context of the \textit{creative economy}.
-    This course will cover topics such as: agents and pricing, demand for culture, the economics of creativity,
-    cultural heritage and tourism, cultural policy (public funding of arts and culture, the economic impact of
-    the arts), the impact of digitisation of cultural goods.</p>
-  <p>Core teaching elements: Lectures, research paper with presentation
-  </p>
-  <p>Recommended reading:</p>
-  <ul>
-    <li>
-      <em>Economics of Culture</em> by David Throsby
-    </li>
-    <li>
-      <em>Advanced Introduction to Cultural Economics</em> by Ruth Towse
-    </li>
-    <li>
-      <em>Cultural Economics</em> by Christiane Hellmanzik
-    </li>
-    <li>
-      <em>Handbook of Cultural Economics</em> by edited by Ruth Towse and Trilce Navarrete Hernández
-    </li>
-    <li>
-      <em>Rockonomics: A Backstage Tour of What the Music Industry Can Teach Us About Economics and Life</em>
-      by Alan Krueger
-    </li>
-  </ul>
-
-  <h3>Economic History of Knowledge and Ideas</h3>
-  <p>Course level: PhD</p>
-  <p>Course description: A number of innovations and circumstances throughout history have had major influence on
-    the stock of knowledge, idea creation, human capital formation, and innovation. This course examines
-    economic research about these phenomena, such as the introduction of the printing press, the Age of
-    Enlightenment, the introduction of copyright, and conflict. Through this course, students will learn how to
-    conduct economic history research, how to address various challenges in collecting historical data, and will
-    understand various identification strategies used in historical contexts.</p>
-  <p>Core teaching elements: Lectures on research papers, referee report</p>
-  <p>Recommended reading:</p>
-  <ul>
-    <li>
-      Dittmar, J. E. (2011). Information technology and economic change: the impact of the printing press. The
-      Quarterly Journal of Economics, 126(3), 1133-1172.
-    </li>
-    <li>
-      Squicciarini, M. P., and Voigtländer, N. (2015). Human capital and industrialization: Evidence from the
-      age of enlightenment. The Quarterly Journal of Economics, 130(4), 1825-1883.
-    </li>
-    <li>
-      Cagé, J., and Rueda, V. 2016. "The Long-Term Effects of the Printing Press in Sub-Saharan Africa."
-      American Economic Journal: Applied Economics, 8 (3): 69-99.
-    </li>
-    <li>
-      Waldinger, F. (2016). Bombs, brains, and science: The role of human and physical capital for the
-      creation of scientific knowledge. Review of Economics and Statistics, 98(5), 811-831.
-    </li>
-    <li>
-      Hanlon, W. W. (2015). Necessity is the mother of invention: Input supplies and Directed Technical
-      Change. Econometrica, 83(1), 67-100.
-    </li>
-    <li>
-      Giorcelli, M., and Moser, P. (2019). Copyrights and creativity: Evidence from Italian operas. Available
-      at SSRN 2505776.
-    </li>
-  </ul>
+    <p>I have a broad range of experience teaching at both the undergraduate and graduate level, ranging from teaching core economic theory, math, and statistics courses to undergraduate students to teaching applied microeconomics seminars to graduate students.</p>
+    <p>During the first year of my PhD at Trinity College Dublin, I was nominated for two teaching awards for my work as a teaching assistant for the first year undergraduate <em>Mathematics and Statistics</em> course. I was the lecturer of the mathematics section of this course for the next three years. I also served as a teaching assistant for the second year undergraduate <em>Intermediate Microeconomics</em> course and as a teaching assistant and lecturer for the <em>Economic Policy and Analysis II</em> course in the Masters in Development Practice programme.</p>
+    <p>As a postdoc at TU Dortmund, I have taught courses and seminars on labour economics (including migration and human capital), urban economics, academic writing, and more recently, European economic integration and Brexit. In addition to teaching, I also have experience in thesis supervision: BSc Economics (4); MSc Economics (4); MSc Business Mathematics (1).</p>
 
   <hr>
 
@@ -659,6 +504,39 @@
   <hr>
 
   <a class="anchor" name="Course Descriptions"><h2>Selected Course Descriptions</h2></a>
+
+  Course descriptions for selected courses are available below. These include: Economics of Brexit, Economics of Migration, Academic Writing, and Mathematics and Statistics. Additional course descriptions and teaching evaluations are available upon request.
+
+  <h3>Economics of Brexit</h3>
+  <p>I lectured the Economics of Brexit seminar offered by the Chair of Urban, Regional, and International Economics at TU Dortmund in Spring 2020. This seminar was taught to approx. 20 final year bachelor students
+    and masters students in the Department of Economics and the Department of Spatial Planning. The seminar was also open to students from
+    several other faculties, such as industrial engineering and computer science.</p>
+  <p>This seminar aims to build on students’ prior knowledge of international trade, factor market integration, tariff policy, and regional competition and industrial policy. Students will apply this knowledge to a practical, real-world example – Brexit. In this setting, students will:</p>
+  <ul>
+    <li>
+      Gain a deeper understanding of complex trade interdependencies between EU and other countries;
+    </li>
+    <li>
+      Learn about the economic framework of decision-making within the EU, particularly with respect to how EU trade policies are set within the EU and between EU and other countries;
+    </li>
+    <li>
+      Explore the European Union’s legal framework and legislative process with respect to developing trade policies;
+    </li>
+    <li>
+      Learn how to evaluate current economic policy debates by synthesizing country-specific trade policy and data and producing a policy report from that country’s perspective.
+    </li>
+  </ul>
+  <p> The first half of the course involves lectures on the history of European economic integration. These lectures provide an overview of the history of the European Union, EU institutions and decision-making processes before discussing the microeconomics and macroeconomics of European integration. Topics covered include: preferential trade liberalisation, customs union vs free trade agreement, types of barriers to trade, allocation and growth effects of trade liberalisation, effect of trade liberalisation on labour markets and migration, exchange rates, optimum currency areas, monetary integration, fiscal policy, and the effect of the global financial crisis.  This seminar discussed EU policies such as Common Agricultural Policy (CAP), EU structural funds and cohesion policy, EU competition and state aid, and the Stability and Growth Pact.</p>
+  <p>In the second week, students are allocated into groups and assigned an EU member state, and the students are required to research that country's economic relationship with the UK and how it will likely be affected by Brexit. During the second half of the course, the students present their country's position to the class and engage in simulated Brexit negotiations. The assessments include two shorter summary reports submitted before and after the negotiation process and a longer research paper submitted at the end of the course.</p>
+  <p>Reading list:</p>
+  <ul>
+    <li>
+      Primary textbook: Baldwin and Wyplosx (2020) "The Economics of European Integration"
+    </li>
+    <li>
+      Secondary textbook: Hix and Høyland (2011). "The Political System of the European Union"
+    </li>
+  </ul>
 
   <h3>Economics of Migration</h3>
   <p>I lectured the Economics of Migration seminar offered by the Chair of Urban, Regional, and International
@@ -818,6 +696,124 @@
   <p>The main text for this course was <em>Mathematics for Economics and Business</em> by Ian Jacques (Pearson).
     This textboox comes with a variety of online resources, including quizzes, that were used throughout the
     module.</p>
+
+  <hr>
+
+  <a class="anchor" name="Potential Courses"><h2>Potential Courses</h2></a>
+
+  I teach courses in urban economics, labour economics (including human capital and migration), and European economic history. I am also qualified to teach mathematics, statistics, and microeconomics at the undergraduate level, as well as cultural economics and academic writing at the undergraduate or graduate level. I have a strong interest in teaching the courses proposed below:
+
+  <h3>Urban Economics</h3>
+  <p>Course level: Bachelor or masters</p>
+  <p>Course description: In this course, we will pose and answer urban economics questions, such as why do cities
+    exist? Why firms cluster? What determines city size and urban growth? We will then use economic theory to
+    analyse the location choice of individuals and firms and to analyse the geography of education, employment,
+    housing, transportation, poverty, and crime.</p>
+  <p>Core teaching elements: Lectures and exam (bachelor-level) or research papers with presentations
+    (master-level)</p>
+  <p>Recommended reading:</p>
+  <ul>
+    <li>
+      <em>Urban Economics</em> by Arthur O'Sullivan
+    </li>
+    <li>
+      <em>Lectures on Urban Economics</em> by Jan K. Brueckner
+    </li>
+    <li>
+      <em>The Triumph of the City</em> by Edward Glaeser
+    </li>
+    <li>
+      <em>Handbook of Urban and Regional Economics</em> edited by Gilles Duranton, Vernon Henderson, and
+      William Strange and other academic journal articles
+    </li>
+    <li>
+      Relevant news articles, podcasts and other sources
+    </li>
+  </ul>
+
+
+  <h3>Economics of European Integration</h3>
+  <p>Course level: Bachelor or masters</p>
+  <p>Course description: This course covers the microeconomics and macroeconomics the EU integration process from
+    the post-war period to present day. We will discuss the phases of trade integration leading to the
+    establishment of a single market, the geography of inequality and regional disparities and patterns of
+    migration, the evolution of CAP and EU Regional Policy, theory of optimal currency areas, evolution of
+    monetary policy and the euro, and the impact of the financial crisis, Brexit, and COVID-19.</p>
+  <p>Core teaching elements: Lectures, research paper with presentation</p>
+  <p>Recommended reading:</p>
+  <ul>
+    <li>
+      <em>The Economics of European Integration</em> by Charles Wyplosz and Richard E. Baldwin
+    </li>
+  </ul>
+
+  <h3>Economics of Art and Culture</h3>
+  <p>Course level: Masters</p>
+  <p>Course description: In this course, students will learn how to use tools of economics to interpret and
+    understand cultural phenomena, identify cultural agents and their activities, and the understand
+    relationship between culture and economics particularly in the context of the \textit{creative economy}.
+    This course will cover topics such as: agents and pricing, demand for culture, the economics of creativity,
+    cultural heritage and tourism, cultural policy (public funding of arts and culture, the economic impact of
+    the arts), the impact of digitisation of cultural goods.</p>
+  <p>Core teaching elements: Lectures, research paper with presentation
+  </p>
+  <p>Recommended reading:</p>
+  <ul>
+    <li>
+      <em>Economics of Culture</em> by David Throsby
+    </li>
+    <li>
+      <em>Advanced Introduction to Cultural Economics</em> by Ruth Towse
+    </li>
+    <li>
+      <em>Cultural Economics</em> by Christiane Hellmanzik
+    </li>
+    <li>
+      <em>Handbook of Cultural Economics</em> by edited by Ruth Towse and Trilce Navarrete Hernández
+    </li>
+    <li>
+      <em>Rockonomics: A Backstage Tour of What the Music Industry Can Teach Us About Economics and Life</em>
+      by Alan Krueger
+    </li>
+  </ul>
+
+  <h3>Economic History of Knowledge and Ideas</h3>
+  <p>Course level: PhD</p>
+  <p>Course description: A number of innovations and circumstances throughout history have had major influence on
+    the stock of knowledge, idea creation, human capital formation, and innovation. This course examines
+    economic research about these phenomena, such as the introduction of the printing press, the Age of
+    Enlightenment, the introduction of copyright, and conflict. Through this course, students will learn how to
+    conduct economic history research, how to address various challenges in collecting historical data, and will
+    understand various identification strategies used in historical contexts.</p>
+  <p>Core teaching elements: Lectures on research papers, referee report</p>
+  <p>Recommended reading:</p>
+  <ul>
+    <li>
+      Dittmar, J. E. (2011). Information technology and economic change: the impact of the printing press. The
+      Quarterly Journal of Economics, 126(3), 1133-1172.
+    </li>
+    <li>
+      Squicciarini, M. P., and Voigtländer, N. (2015). Human capital and industrialization: Evidence from the
+      age of enlightenment. The Quarterly Journal of Economics, 130(4), 1825-1883.
+    </li>
+    <li>
+      Cagé, J., and Rueda, V. 2016. "The Long-Term Effects of the Printing Press in Sub-Saharan Africa."
+      American Economic Journal: Applied Economics, 8 (3): 69-99.
+    </li>
+    <li>
+      Waldinger, F. (2016). Bombs, brains, and science: The role of human and physical capital for the
+      creation of scientific knowledge. Review of Economics and Statistics, 98(5), 811-831.
+    </li>
+    <li>
+      Hanlon, W. W. (2015). Necessity is the mother of invention: Input supplies and Directed Technical
+      Change. Econometrica, 83(1), 67-100.
+    </li>
+    <li>
+      Giorcelli, M., and Moser, P. (2019). Copyrights and creativity: Evidence from Italian operas. Available
+      at SSRN 2505776.
+    </li>
+  </ul>
+
 
 </div>
 </body>
