--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
   <hr>
 
-  <a class="anchor" name="Other Research"><h2>Other Research</h2>
+  <a class="anchor" name="Other Research"><h2>Other Research</h2></a>
     <h4>
       Disentangling the effects of input sharing and knowledge spillovers in literary production. <em>Working
       paper</em>
