--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          src="img/CoverPhoto_COPY.jpg"/>
     <div class="a">
       <div class="avatar">
-        <img src="/img/photo.jpg" alt="Dr. Sara Mitchell"/>
+        <img src="img/photo.jpg" alt="Dr. Sara Mitchell"/>
       </div>
     </div>
 
