Giving the page a max-width of 1440px

--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
 <div>
   <a name="Home"></a>
   <!--Header-->
-  <div class="header width-wrap">
-    <img class="banner"
-         src="img/CoverPhoto_COPY.jpg"/>
-    <div class="a">
-      <div class="avatar">
-        <img src="img/photo.jpg" alt="Dr. Sara Mitchell"/>
+  <div class="header">
+    <div class="width-wrap">
+      <img class="banner"
+           src="img/CoverPhoto_COPY.jpg"/>
+      <div class="a">
+        <div class="avatar">
+          <img src="img/photo.jpg" alt="Dr. Sara Mitchell"/>
+        </div>
       </div>
-    </div>
 
-    <div class="b">
-      <div>
-        <p style="font-size: 2.5em">Sara Mitchell</p>
-        <p>Postdoctoral Researcher</p>
-        <!--<p>Chair of Urban, Regional, and International Economics</p>-->
-        <p>Technical University Dortmund</p>
+      <div class="b">
+        <div>
+          <p style="font-size: 2.5em">Sara Mitchell</p>
+          <p>Postdoctoral Researcher</p>
+          <!--<p>Chair of Urban, Regional, and International Economics</p>-->
+          <p>Technical University Dortmund</p>
+        </div>
       </div>
     </div>
   </div>
