Trimming the image "fat"

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <!--Header-->
   <div class="header">
     <div class="width-wrap">
-      <img class="banner"
-           src="img/CoverPhoto_COPY.jpg"/>
+      <img class="banner" src="img/cover.jpg"/>
       <div class="a">
         <div class="avatar">
           <img src="img/photo.jpg" alt="Dr. Sara Mitchell"/>
