Fixing up the avatar image, adding Google scholar profile

--- a/index.html
+++ b/index.html
@@ -246,8 +246,12 @@
       <td>Find Me:</td>
       <td>
         <a href="https://www.wiwi2.tu-dortmund.de/wiwi/uri/de/forschung/Research-Team/index.html">TU Dortmund
-          Website</a>, <a href="https://ideas.repec.org/f/pmi779.html"> RePeC Author Page</a>, <a
-          href="https://orcid.org/0000-0002-7544-2263">ORCiD</a>, <a
+          Website</a>,
+        <a href="https://ideas.repec.org/f/pmi779.html"> RePeC Author Page</a>,
+        <a
+          href="https://orcid.org/0000-0002-7544-2263">ORCiD</a>,
+        <a href="https://scholar.google.com/citations?user=snvM7KMAAAAJ&hl=en">Google Scholar</a>,
+        <a
           href="https://www.linkedin.com/in/sara-mitchell-056a7033/">LinkedIn</a>
       </td>
     </tr>
