Editing work experience

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <table>
     <tbody>
     <tr>
-      <td>June 2018 - now</td>
+      <td>June 2018 - present</td>
       <td><em>Postdoctoral Researcher</em></td>
     </tr>
     <tr>
@@ -149,6 +149,30 @@
     <tr>
       <td></td>
       <td>UCD Institute of Public Administration</td>
+    </tr>
+    <tr>
+      <td>Sep. 2013 - Aug 2016</td>
+      <td><em>Lecturer</em></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Mathematics and Statistics</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Department of Economics, Trinity College Dublin</td>
+    </tr>
+    <tr>
+      <td>Jan. 2015 - Aug 2015</td>
+      <td><em>Lecturer</em></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Economic and Policy Analysis II</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Masters in Development Practice, Trinity College Dublin</td>
     </tr>
     </tbody>
   </table>
