--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
   <p>Course level: Masters</p>
   <p>Course description: In this course, students will learn how to use tools of economics to interpret and
     understand cultural phenomena, identify cultural agents and their activities, and the understand
-    relationship between culture and economics particularly in the context of the <em>creative economy<em>.
+    relationship between culture and economics particularly in the context of the <em>creative economy</em>.
     This course will cover topics such as: agents and pricing, demand for culture, the economics of creativity,
     cultural heritage and tourism, cultural policy (public funding of arts and culture, the economic impact of
     the arts), the impact of digitisation of cultural goods.</p>
